Fixed some alignment issues in second and fourth main container

--- a/css/style.css
+++ b/css/style.css
@@ -12,10 +12,8 @@ body {
 }
 
 html {
-    margin: 0;
-    padding: 0;
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 
 .first-main-container {
@@ -44,7 +42,6 @@ ul {
     font-size: 16px;
     display: flex;
     list-style: none;
-    gap: 16px;
     margin: 0;
     padding: 8px;
     padding-left: 8px;
@@ -120,6 +117,11 @@ p {
     padding-right: 40px;
     justify-content: flex-start;
     align-items: center;
+    margin-bottom: auto;
+}
+
+.second-main-container h2 {
+    text-align: center;
 }
 
 .image-container {
@@ -194,6 +196,7 @@ p {
     align-self: center;
     gap: 16px;
     color: white;
+    flex-wrap: wrap;
 }
 
 .content-container {
@@ -203,6 +206,8 @@ p {
 .button-container {
     flex-grow: 1;
     align-self: center;
+    display: flex;
+    justify-content: center;
 }
 
 .content-container h3 {
